# ContactSVM

./: .gitignore  CMakeLists.txt  OpenCV_release_ok.props  README.md  folders_contactdetection_example.csv  trainSVM.sln
BagOfWords/: BOW.cpp  BOW.h  BOW_lowlevel.cpp  BOW_lowlevel.h  BagOfWords.vcxproj  BagOfWords.vcxproj.filters  CMakeLists.txt  FileUtils.cpp  FileUtils.h  Main.cpp  Main.h  Network_force.cpp  Network_force.h  dirent.h  helper_parseopts.h  helpers_sort.cpp  helpers_sort.h
Classifier/: CMakeLists.txt  Classifier.vcxproj  Classifier.vcxproj.filters  classifier.cpp  classifier.h  dataset.cpp  dataset.h
LieGroup/: CMakeLists.txt  LieGroup.cpp  LieGroup.h  LieGroup.inl  LieGroup.vcxproj  Makefile  rmatrix3.cpp  rmatrix3.h  rmatrix3.inl  rmatrix3friend.inl  types.h  utils.h
SemiAutomaticImageLabelling/: SemiAutomaticImageLabelling.cpp  SemiAutomaticImageLabelling.h  SemiAutomaticImageLabelling.vcxproj  SemiAutomaticImageLabelling.vcxproj.filters  stdafx.cpp
Utilities/: CMakeLists.txt  CSV_reader.cpp  CSV_reader.h  FileUtils.cpp  FileUtils.h  HTransform.cpp  HTransform.h  Utilities.cpp  Utilities.h  Utilities.vcxproj  Utilities.vcxproj.filters  testRootfinding.cpp
old_code/: BOW_lowlevel.h  Network_force.cpp
trainSVM/: OpenCV_processing.h  ReadMe.txt  stdafx.cpp  trainSVM.cpp  trainSVM.vcxproj  trainSVM.vcxproj.filters
